# pdf-strings

./: .gitignore  Cargo.toml  LICENSE  README.md
cli/: Cargo.toml
cli/src/: main.rs
examples/: check_cidsysteminfo.rs  check_hyphen_width.rs  check_inter_gids.rs  check_pdf_font_gids.rs  debug_extract.rs  dump_content.rs  dump_tounicode.rs  extract.rs  extract_bounds.rs  extract_font.rs  filter_by_font.rs  list_fonts.rs
ffi/: Cargo.toml
ffi/src/: lib.rs  types.rs
python/: README.md  hatch_build.py  pyproject.toml  test_complete_api.py  test_python.py
python/pdf_strings/: __init__.py
src/: core_fonts.rs  error.rs  extract.rs  fonts.rs  glyphnames.rs  lib.rs  output.rs  processor.rs  types.rs  utils.rs
src/data/: core_fonts.rs  glyphnames.rs  mod.rs  zapfglyphnames.rs
tests/: tests.rs
