[package]
name = "pdf-extract"
version = "0.10.0"
description = "Parse structured spans of strings from PDF files"
repository = "https://github.com/bbqsrc/pdf-strings"
documentation = "https://docs.rs/crate/pdf-strings/"
authors = [
    "Jeff Muizelaar <jmuizelaar@mozilla.com>",
    "Brendan Molloy <brendan@bbqsrc.net>",
]
keywords = ["pdf", "text-extraction", "font", "cmap", "unicode"]
license = "MIT"
edition = "2018"

[profile.release]
debug = true

[dependencies]
adobe-cmap-parser = "0.4.1"
encoding_rs = "0.8.34"
euclid = "0.20.5"
lopdf = {version = "0.38", default-features = false}
postscript = "0.14"
type1-encoding-parser = "0.1.0"
unicode-normalization = "0.1.19"
cff-parser = "0.1.0"
log = "0.4.22"
ttf-parser = "0.25"

[dev-dependencies]
ureq = "2.6.2"
test-log = "0.2.17"

[dev-dependencies.simple_logger]
version = "5"
default-features = false
features = ["colors"]
