[workspace]
members = [".", "cli", "ffi"]
resolver = "2"

[package]
name = "pdf-strings"
version = "0.10.0"
description = "Parse structured spans of strings from PDF files"
repository = "https://github.com/bbqsrc/pdf-strings"
documentation = "https://docs.rs/crate/pdf-strings/"
authors = [
    "Jeff Muizelaar <jmuizelaar@mozilla.com>",
    "Brendan Molloy <brendan@bbqsrc.net>",
]
keywords = ["pdf", "text-extraction", "font", "cmap", "unicode"]
license = "MIT"
edition = "2024"

[profile.release]
debug = true

[dependencies]
adobe-cmap-parser = "0.4.1"
encoding_rs = "0.8.34"
euclid = "0.20"
lopdf = {version = "0.38", default-features = false}
type1-encoding-parser = "0.1.0"
unicode-normalization = "0.1.19"
cff-parser = "0.1.0"
ttf-parser = "0.25"
tracing = "0.1.41"

[dev-dependencies]
ureq = "2.6.2"
test-log = "0.2.17"

[dev-dependencies.simple_logger]
version = "5"
default-features = false
features = ["colors"]
